--- a/ios/25.1.md
+++ b/ios/25.1.md
@@ -1,11 +1,11 @@
 <p>
-  This documentation is for the Countly iOS SDK version 25.4.X. The SDK source
+  This documentation is for the Countly iOS SDK version 25.1.X. The SDK source
   code repository can be found
   <a href="https://github.com/Countly/countly-sdk-ios">here</a>.
 </p>
 <p>
   Click
-  <a href="/hc/en-us/articles/360037236571#h_01H9QCP8G7Y97Y1T51TGGNDMNP" target="_self" rel="undefined">here, </a>to
+  <a href="https://support.count.ly/hc/en-us/articles/360037236571-Downloading-and-Installing-SDKs#h_01H9QCP8G7Y97Y1T51TGGNDMNP" target="_self" rel="undefined">here, </a>to
   access the documentation for older SDK versions.
 </p>
 <p>
@@ -34,13 +34,15 @@
 </p>
 <p>
   - Using
-  <a href="#h_01HAVHW0RTQ6WN8CYVNVZQ5TEP">Swift Package Manager (SPM)</a>
+  <a href="https://support.count.ly/hc/en-us/articles/360037753511-iOS-watchOS-tvOS-macOS#h_01HAVHW0RTQ6WN8CYVNVZQ5TEP">Swift Package Manager (SPM)</a>
 </p>
 <p>
-  - Using <a href="#h_01HAVHW0RTQGRSE9ZRVQSAXJ74">Carthage</a>
+  - Using
+  <a href="https://support.count.ly/hc/en-us/articles/360037753511-iOS-watchOS-tvOS-macOS#h_01HAVHW0RTQGRSE9ZRVQSAXJ74">Carthage</a>
 </p>
 <p>
-  - Using <a href="#h_01HAVHW0RTXSFZD8R6QMX0GWPN">CocoaPods</a>
+  - Using
+  <a href="https://support.count.ly/hc/en-us/articles/360037753511-iOS-watchOS-tvOS-macOS#h_01HAVHW0RTXSFZD8R6QMX0GWPN">CocoaPods</a>
 </p>
 <h1 id="h_01HAVHW0RNQWE9PRRXT9HXFKMJ">SDK Integration</h1>
 <h2 id="h_01HAVHW0RNVDW2E2F83R8E6PSB">Minimal Setup</h2>
@@ -87,7 +89,10 @@
   <strong>Note:</strong> Make sure you start Countly iOS SDK on the main thread.
 </p>
 <p>
-  <span style="font-weight: 400;">Set your app key and host on the <code>CountlyConfig</code></span><span style="font-weight: 400;"> object. Please check <a href="/hc/en-us/articles/900000908046#h_01HABSX9KX44C9SF48WRPQNCP3">here</a> for more information about acquiring application key (APP_KEY) and server URL.</span>
+  <span style="font-weight: 400;">Set your app key and host on the <code>CountlyConfig</code></span><span style="font-weight: 400;"> object. Please check <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KX44C9SF48WRPQNCP3">here</a> for more information about acquiring application key (APP_KEY) and server URL.</span>
+</p>
+<p>
+  <span style="font-weight: 400;">If you are using the Countly Enterprise Edition trial servers, the <code>host</code></span><span style="font-weight: 400;"> should be <code>https://try.count.ly</code>, <code>https://us-try.count.ly</code> or <code>https://asia-try.count.ly</code></span><span style="font-weight: 400;">. Stated simply, it should be the domain from which you are accessing your trial dashboard.</span>
 </p>
 <p>
   <span style="font-weight: 400;">You can run your project and see the first session data immediately displayed on your Countly Server dashboard.</span>
@@ -96,7 +101,7 @@
   <p>
     If you are in doubt about the correctness of your Countly SDK integration,
     you can learn about the verification methods from
-    <a href="/hc/en-us/articles/900000908046#h_01HABSX9KXE6YKVETHDWPP8J3K" target="blank">here</a>.
+    <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KXE6YKVETHDWPP8J3K" target="blank">here</a>.
   </p>
 </div>
 <h2 id="h_01HAVHW0RNECF2W03GPMKS3E6K">Additional Features</h2>
@@ -157,10 +162,10 @@
 <div class="callout callout--info">
   <strong>Countly Code Generator</strong>
   <p>
-    <a href="https://countly.github.io/countly-code-generator/">The Countly Code Generator</a>
-    can be used to generate Countly iOS SDK code snippets effortlesly. You can
-    provide values for your events, user profiles, or just start with basic integration.
-    It will generate the necessary code for you.
+    <a href="https://code.count.ly">The Countly Code Generator</a> can be used
+    to generate Countly iOS SDK code snippets effortlesly. You can provide values
+    for your events, user profiles, or just start with basic integration. It
+    will generate the necessary code for you.
   </p>
 </div>
 <h1 id="h_01HAVHW0RNQ9ZX3KMX09DDFETR">SDK Logging / Debug Mode</h1>
@@ -189,7 +194,7 @@
 </p>
 <p>
   For more information on where to find the SDK logs you can check the documentation
-  <a href="/hc/en-us/articles/900000908046#h_01HABSX9KXC5S8Q1NQWDZ33HXC" target="blank">here</a>.
+  <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KXC5S8Q1NQWDZ33HXC" target="blank">here</a>.
 </p>
 <h3 id="h_01HAVHW0RNY5T2XH6J8HYYJ2MF">Logger Delegate</h3>
 <p>
@@ -472,7 +477,7 @@ Countly.sharedInstance().recordError("ERROR_NAME", isFatal: true, stackTrace: Th
 </p>
 <p>
   - <strong>crashMetric</strong>: Crash related
-  <a href="/hc/en-us/articles/9290669873305#h_01HJ5V4WX0XFP7FC8ETDC3B96M">metrics</a>
+  <a href="https://support.count.ly/hc/en-us/articles/9290669873305-A-deeper-look-at-SDK-concepts#h_01HJ5V4WX0XFP7FC8ETDC3B96M">metrics</a>
   recorded by the SDK.
 </p>
 <p>
@@ -689,10 +694,7 @@ func application(_ application: UIApplication, didFinishLaunchingWithOptions lau
     <span class="tabs-link">Swift</span>
   </div>
   <div class="tab">
-    <pre><code class="objectivec">config.crashOccuredOnPreviousSessionCallback = ^(NSDictionary * crashReport)
-{  
-  NSLog(@"crash report: %@", crashReport);
-};</code></pre>
+    <pre><code class="objectivec">config.crashOccuredOnPreviousSessionCallback = ^(<span>NSDictionary</span><span> * </span>crashReport)<br>{<br>  NSLog(@"crash report: <a href="mailto:%@&quot;,">%@",</a> crashReport);<br>};</code></pre>
   </div>
   <div class="tab is-hidden">
     <pre><code class="swift">config.crashOccuredOnPreviousSessionCallback =<br>{<br>  (crashReport: [AnyHashable: Any]) in print("crash report: \(crashReport)")<br>}</code></pre>
@@ -718,8 +720,8 @@ func application(_ application: UIApplication, didFinishLaunchingWithOptions lau
     <span class="tabs-link">Swift</span>
   </div>
   <div class="tab">
-    <pre><code class="objectivec">config.shouldSendCrashReportCallback = ^(NSDictionary * crashReport)
-{                                                                                                                              NSLog(@"crash report: %@", crashReport);
+    <pre><code class="objectivec">config.shouldSendCrashReportCallback = ^(<span>NSDictionary</span><span> * </span>crashReport)
+{                                                                                                                                        NSLog(@"crash report: <a href="mailto:%@&quot;,">%@",</a> crashReport);
   return YES;    //NO;
 };</code></pre>
   </div>
@@ -753,7 +755,7 @@ func application(_ application: UIApplication, didFinishLaunchingWithOptions lau
   <code>New Run Script Phase</code>from the list.
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/6dcebf7-Screen_Shot_2017-09-11_at_12.23.12.png">
+  <img src="https://count.ly/images/guide/6dcebf7-Screen_Shot_2017-09-11_at_12.23.12.png">
 </div>
 <p>Then, add the following snippet:</p>
 <pre><code class="shell">COUNTLY_DSYM_UPLOADER=$(/usr/bin/find $SRCROOT -name "countly_dsym_uploader.sh" | head -n 1)
@@ -770,7 +772,7 @@ sh "$COUNTLY_DSYM_UPLOADER" "https://YOUR_COUNTLY_SERVER" "YOUR_APP_KEY"</code><
   <span style="font-weight: 400;">Next, select the checkbox</span><code>Run script only when installing</code>.
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/2e1174c-db851a5-Screen_Shot_2017-09-11_at_12.31.14.png">
+  <img src="https://count.ly/images/guide/2e1174c-db851a5-Screen_Shot_2017-09-11_at_12.31.14.png">
 </div>
 <p>
   <strong>Note:</strong> Do not forget to replace your server and app key.
@@ -779,14 +781,14 @@ sh "$COUNTLY_DSYM_UPLOADER" "https://YOUR_COUNTLY_SERVER" "YOUR_APP_KEY"</code><
   <span style="font-weight: 400;">By default, Xcode will generate dSYM files for the Release build configuration, and the <code>countly_dsym_uploader</code></span><span style="font-weight: 400;"> script will handle the uploading automatically. You can check for the results on the Report Navigator within Xcode. If the dSYM upload has completed successfully, you will see the<code>[Countly] dSYM upload successfully completed.</code></span><span style="font-weight: 400;">message.</span>
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/4ac2acd-update-img.png">
+  <img src="https://count.ly/images/guide/4ac2acd-update-img.png">
 </div>
 <p>
   <span style="font-weight: 400;">If there are any errors while uploading the dSYM file, you can see these error messages in the Report Navigator. Some of the possible error reasons include: the dSYM file not being created due to build configurations, the dSYM file being created at a non-default location, wrong App ID and/or Countly Server address, or network unavailability.</span>
 </p>
 <h3 id="h_01HAVHW0RP2HVF94RFG0TJY063">Manual dSYM Uploading</h3>
 <p>
-  <span style="font-weight: 400;">In case of an error with Automatic dSYM Uploading, or if you would like to upload your dSYM files manually, you can use our guide for Manual dSYM Uploading </span><a href="/hc/en-us/articles/360037261472#h_01HBP9RH2Q5M0YMR2YS4QVVRK8"><span style="font-weight: 400;">here</span></a><span style="font-weight: 400;">. You will also need to use Manual dSYM Uploading if Bitcode is enabled while uploading your app to App Store Connect.</span>
+  <span style="font-weight: 400;">In case of an error with Automatic dSYM Uploading, or if you would like to upload your dSYM files manually, you can use our guide for Manual dSYM Uploading </span><a href="https://support.count.ly/hc/en-us/articles/360037261472-Crash-symbolication#h_01HBP9RH2Q5M0YMR2YS4QVVRK8"><span style="font-weight: 400;">here</span></a><span style="font-weight: 400;">. You will also need to use Manual dSYM Uploading if Bitcode is enabled while uploading your app to App Store Connect.</span>
 </p>
 <h3 id="h_01HAVHW0RPB0WB207T16B54NGP">Bitcode Enabled Apps</h3>
 <p>
@@ -802,7 +804,7 @@ sh "$COUNTLY_DSYM_UPLOADER" "https://YOUR_COUNTLY_SERVER" "YOUR_APP_KEY"</code><
   <span style="font-weight: 400;">For more information regarding downloading dSYM files from Apple, please see Apple's documentation </span><a href="https://help.apple.com/xcode/mac/current/#/devef5928039"><span style="font-weight: 400;">here</span></a><span style="font-weight: 400;">.</span>
 </p>
 <p>
-  <span style="font-weight: 400;">After you receive your dSYM file from Apple, you can use our Manual dSYM Uploading </span><a href="/hc/en-us/articles/360037261472#h_01HBP9RH2Q5M0YMR2YS4QVVRK8"><span style="font-weight: 400;">guide</span></a><span style="font-weight: 400;">.</span>
+  <span style="font-weight: 400;">After you receive your dSYM file from Apple, you can use our Manual dSYM Uploading </span><a href="https://support.count.ly/hc/en-us/articles/360037261472-Crash-symbolication#h_01HBP9RH2Q5M0YMR2YS4QVVRK8"><span style="font-weight: 400;">guide</span></a><span style="font-weight: 400;">.</span>
 </p>
 <h3 id="h_01HAVHW0RPGRH26TX797Y456S7">How to Use Symbolication</h3>
 <p>
@@ -821,7 +823,7 @@ YourAppName                               0x000000010006ad34 YourAppName + 14264
 -[MHViewController transitionToMahya] (in YourAppName) (MHViewController.m:443)
 -[MHViewController textFieldShouldReturn:] (in YourAppName) (MHViewController.m:210)</code></pre>
 <p>
-  <span style="font-weight: 400;">For more information about how to use the Symbolication feature on the Countly Server, please see our Symbolication documentation </span><a href="/hc/en-us/articles/360037261472"><span style="font-weight: 400;">here</span></a><span style="font-weight: 400;">.</span>
+  <span style="font-weight: 400;">For more information about how to use the Symbolication feature on the Countly Server, please see our Symbolication documentation </span><a href="https://support.count.ly/hc/en-us/articles/360037261472-Crash-symbolication"><span style="font-weight: 400;">here</span></a><span style="font-weight: 400;">.</span>
 </p>
 <h1 id="h_01HAVHW0RP28BREFV5E1HC97DM">Events</h1>
 <p>
@@ -1732,7 +1734,7 @@ Countly.sharedInstance().views().addSegmentationToViewWithName(withName: "MyView
   Countly gives you the ability to send Push Notifications to your users using
   your app with the iOS SDK integration. For more information on how to best use
   this feature you can check
-  <a href="/hc/en-us/articles/4405405459225" target="_blank" rel="noopener noreferrer">this</a>
+  <a href="https://support.count.ly/hc/en-us/articles/4405405459225-Push-Notifications" target="_blank" rel="noopener noreferrer">this</a>
   article.
 </p>
 <p>
@@ -1756,7 +1758,7 @@ Countly.sharedInstance().views().addSegmentationToViewWithName(withName: "MyView
   <span style="font-weight: 400;">Then, under the </span><strong>Capabilities</strong><span style="font-weight: 400;"> section of Xcode, enable </span><strong>Push Notifications</strong><span style="font-weight: 400;"> and the </span><strong>Remote notifications Background Mode</strong><span style="font-weight: 400;"> for your target, as shown in the screenshot below:</span>
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/0359527-push_xcode.png">
+  <img src="https://count.ly/images/guide/0359527-push_xcode.png">
 </div>
 <h2 id="h_01HAVHW0RQSFQYGK10F4REYQNG">Enabling Push</h2>
 <p>
@@ -1822,7 +1824,7 @@ Countly.sharedInstance().views().addSegmentationToViewWithName(withName: "MyView
 <p>
   <strong>Note:</strong>
   <span style="font-weight: 400;">To see how to send push notifications using the Countly Server, please check our</span>
-  <a href="/hc/en-us/articles/360037270012">Push Notifications documentation</a>.
+  <a href="https://support.count.ly/hc/en-us/articles/360037270012-Push-notifications">Push Notifications documentation</a>.
 </p>
 <h2 id="h_01HNF5NAJ40CEETJNZFDT5CPJ7">Removing Push</h2>
 <p>
@@ -1847,13 +1849,13 @@ Countly.sharedInstance().views().addSegmentationToViewWithName(withName: "MyView
   <span style="font-weight: 400;">To do so, select your app target in Xcode and open the <code>Info</code></span><span style="font-weight: 400;"> tab. Then, open the <code>URL Types</code></span><span style="font-weight: 400;"> section by clicking the horizontal arrow, and click the plus <code>+</code></span><span style="font-weight: 400;"> sign there.</span>
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/cbf1169-ss_url_types.png">
+  <img src="https://count.ly/images/guide/cbf1169-ss_url_types.png">
 </div>
 <p>
   <span style="font-weight: 400;">Enter an identifier (preferably in reverse domain format) into the <code>Identifier</code></span><span style="font-weight: 400;"> field and enter your app's URL scheme (without <code>://</code></span><span style="font-weight: 400;">part) into the <code>URL Schemes</code></span><span style="font-weight: 400;"> field. Optionally, you can set an <code>Icon</code></span><span style="font-weight: 400;">. You can leave the <code>Role</code></span><span style="font-weight: 400;"> field as whatever its default value is. When you are done, you can confirm that your new URL scheme has been added to your app's <code>Info.plist</code></span><span style="font-weight: 400;"> file. It should look like this:</span>
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/273fd0d-ss2.png">
+  <img src="https://count.ly/images/guide/273fd0d-ss2.png">
 </div>
 <p>
   <span style="font-weight: 400;">After setting up the URL scheme, you should add the <code>application:openURL:options:</code></span><span style="font-weight: 400;"> method to your app delegate:</span>
@@ -1957,7 +1959,7 @@ Countly.sharedInstance().views().addSegmentationToViewWithName(withName: "MyView
   <code>Notification Service Extension</code> target.
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/f62249f-screen-1.png">
+  <img src="https://count.ly/images/guide/f62249f-screen-1.png">
 </div>
 <p>
   <span style="font-weight: 400;">Use the <code>Product Name</code> field of the Notification Service Extension target as you wish (for example: CountlyNSE) and ensure the <code>Team</code> is also selected.</span>
@@ -1968,7 +1970,7 @@ Countly.sharedInstance().views().addSegmentationToViewWithName(withName: "MyView
   <code>Cancel</code>.
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/17d2fec-screen-2.png">
+  <img src="https://count.ly/images/guide/17d2fec-screen-2.png">
 </div>
 <p>
   Under the <code>Build Phases</code> &gt; <code>Compile Sources</code>
@@ -1976,7 +1978,7 @@ Countly.sharedInstance().views().addSegmentationToViewWithName(withName: "MyView
   sign.
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/1255590-screen-3_arrow.png">
+  <img src="https://count.ly/images/guide/1255590-screen-3_arrow.png">
 </div>
 <p>
   Select <code>CountlyNotificationService.m</code> from the list.
@@ -1986,7 +1988,7 @@ Countly.sharedInstance().views().addSegmentationToViewWithName(withName: "MyView
   <span style="font-weight: 400;">If you cannot see the <code>CountlyNotificationService.m</code></span><span style="font-weight: 400;"> file because you are using CocoaPods or Carthage for integration, please locate it yourself (probably under the <code>Pods</code></span><span style="font-weight: 400;"> folder) and add it to your project manually.</span>
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/2def469-screen_4.png">
+  <img src="https://count.ly/images/guide/2def469-screen_4.png">
 </div>
 <p>
   Then find the <code>NotificationService.m</code> file (<code>NotificationService.swift</code>
@@ -2113,7 +2115,7 @@ Countly.sharedInstance().askForNotificationPermission(options: authorizationOpti
   <span style="font-weight: 400;">You can view the detailed flow in this chart (download the chart for a larger view):</span>
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/0176050-diagram-3.png">
+  <img src="https://count.ly/images/guide/0176050-diagram-3.png">
 </div>
 <h2 id="h_01HAVHW0RQT4Z1ZS28WHTGKNE7">Advanced Setup</h2>
 <h3 id="h_01HAVHW0RQWTV4XM00GRAS3ZW6">Test Mode</h3>
@@ -2349,7 +2351,7 @@ Countly.sharedInstance().askForNotificationPermission(options: authorizationOpti
   <span style="font-weight: 400;">First go to the </span><a href="https://developer.apple.com/account/ios/authkey/create"><span style="font-weight: 400;">Create a New Key</span></a><span style="font-weight: 400;"> section on the Apple Developer website to get an APNs Auth Key.</span>
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/1df7566-af33314-Screenshot_2017-09-20_14.38.56.png">
+  <img src="https://count.ly/images/guide/1df7566-af33314-Screenshot_2017-09-20_14.38.56.png">
 </div>
 <p>
   Check the <code>APNs</code> option and create your key.
@@ -2384,13 +2386,13 @@ Countly.sharedInstance().askForNotificationPermission(options: authorizationOpti
   <span style="font-weight: 400;">Please go to the </span><strong>Certificates</strong><span style="font-weight: 400;"> section on the </span><a href="https://developer.apple.com/account/ios/certificate/"><strong>Certificates, Identifiers &amp; Profiles</strong></a><span style="font-weight: 400;"> page on the Apple Developer website. Click the plus sign and select the </span><strong>Apple Push Notification service SSL (Sandbox &amp; Production)</strong><span style="font-weight: 400;"> type. Follow the instructions. Once you are done, download it and double click to add it to your Keychain.</span>
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/2248a72-1009cff-push_addcert.png">
+  <img src="https://count.ly/images/guide/2248a72-1009cff-push_addcert.png">
 </div>
 <p>
   <span style="font-weight: 400;">Next, you'll need to export your push certificate into </span><strong>p12</strong><span style="font-weight: 400;"> format. Please open the </span><strong>Keychain Access</strong><span style="font-weight: 400;"> app, select the </span><strong>login</strong><span style="font-weight: 400;"> keychain, and the </span><strong>My Certificates</strong><span style="font-weight: 400;"> category. Search for your app ID and find the certificate starting with the </span><strong>Apple Push Services</strong><span style="font-weight: 400;">. Select both the certificate and its private key as shown in the screenshot below. Right click and choose </span><strong>Export 2 items...</strong><span style="font-weight: 400;"> and save it. You're free to name the p12 file as you wish and to set up a passphrase or leave it empty.</span>
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/94d763b-push_p12.png">
+  <img src="https://count.ly/images/guide/94d763b-push_p12.png">
 </div>
 <h3 id="h_01HNF5QRPJGG0GKMMH2SZWVK85">
   <span style="font-weight: 400;">Setting up the Dashboard</span>
@@ -2513,7 +2515,7 @@ config.IP = "255.255.255.255"</code></pre>
 </p>
 <h1 id="h_01HAVHW0RRBKC5DT7Z5HYY70KQ">Remote Config</h1>
 <p>
-  <span style="font-weight: 400;">Remote config allows you to modify how your app functions or looks by requesting key-value pairs from your Countly server. The returned values may be modified based on the user properties. For more details, please see the </span><a href="/hc/en-us/articles/360037270492"><span style="font-weight: 400;">Remote Config documentation</span></a><span style="font-weight: 400;">.</span>
+  <span style="font-weight: 400;">Remote config allows you to modify how your app functions or looks by requesting key-value pairs from your Countly server. The returned values may be modified based on the user properties. For more details, please see the </span><a href="https://support.count.ly/hc/en-us/articles/360037270492-Remote-config"><span style="font-weight: 400;">Remote Config documentation</span></a><span style="font-weight: 400;">.</span>
 </p>
 <p>
   Once downloaded, Remote config values will be saved persistently and available
@@ -2954,7 +2956,7 @@ Countly.sharedInstance().remoteConfig.removeDownloadCallback{ response, error, f
   <span style="font-weight: 400;">Optionally, you can set the Countly iOS SDK to automatically ask users for a 1 to 5-star rating, depending on the app launch count for each version. To do so, you will need to set the <code>starRatingSessionCount</code></span><span style="font-weight: 400;"> property on the <code>CountlyConfig</code></span><span style="font-weight: 400;"> object. When the total number of sessions reaches the <code>starRatingSessionCount</code></span><span style="font-weight: 400;">, an alert view asking for a 1 to 5-star rating will be displayed automatically, once for each new version of the app.</span>
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/0df53f4-rating-detail-white.png">
+  <img src="https://count.ly/images/guide/0df53f4-rating-detail-white.png">
 </div>
 <div class="tabs">
   <div class="tabs-menu">
@@ -3046,15 +3048,15 @@ config.starRatingDismissButtonTitle = "No, thanks."</code></pre>
 </div>
 <p>
   It is possible to display 3 kinds of feedback widgets:
-  <a href="/hc/en-us/articles/4652903481753#h_01HAY62C2QB9K7CRDJ90DSDM0D" target="_blank" rel="noopener">NPS</a>,
-  <a href="/hc/en-us/articles/4652903481753#h_01HAY62C2Q965ZDAK31TJ6QDRY" target="_blank" rel="noopener">Survey</a>
+  <a href="https://support.count.ly/hc/en-us/articles/4652903481753-Feedback-Surveys-NPS-and-Ratings-#h_01HAY62C2QB9K7CRDJ90DSDM0D" target="_blank" rel="noopener">NPS</a>,
+  <a href="https://support.count.ly/hc/en-us/articles/4652903481753-Feedback-Surveys-NPS-and-Ratings-#h_01HAY62C2Q965ZDAK31TJ6QDRY" target="_blank" rel="noopener">Survey</a>
   and
-  <a href="/hc/en-us/articles/4652903481753#h_01HAY62C2R4S05V7WJC5DEVM0N" target="_blank" rel="noopener">Rating</a>.
+  <a href="https://support.count.ly/hc/en-us/articles/4652903481753-Feedback-Surveys-NPS-and-Ratings-#h_01HAY62C2R4S05V7WJC5DEVM0N" target="_blank" rel="noopener">Rating</a>.
   All widgets are shown as webviews and should be approached using the same methods.
 </p>
 <p>
   For more detailed information about Feedback Widgets, you can refer to
-  <a href="/hc/en-us/articles/4652903481753" target="_blank" rel="noopener noreferrer">here</a>.
+  <a href="https://support.countly.com/hc/en-us/articles/4652903481753-Feedback-Overview" target="_blank" rel="noopener noreferrer">here</a>.
 </p>
 <div class="callout callout--warning">
   <p>
@@ -3236,7 +3238,8 @@ aFeedbackWidget.recordResult(nil) // if user dismissed the feedback widget witho
 </div>
 <p>
   For more information regarding how to structure the result dictionary, you would
-  look <a href="/hc/en-us/articles/9290669873305" target="_self">here</a>.
+  look
+  <a href="https://support.count.ly/hc/en-us/articles/9290669873305-A-deeper-look-at-SDK-concepts" target="_self">here</a>.
 </p>
 <h1 id="h_01HAVHW0RRRH4M1Y4CDJSHGERJ">User Profiles</h1>
 <div class="callout callout--info">
@@ -3413,7 +3416,7 @@ Countly.user().save()</code></pre>
 <p>
   Performance Monitoring feature allows you to analyze your application's performance
   on various aspects. For more details please see
-  <a href="/hc/en-us/articles/900000819806" target="_self">Performance Monitoring documentation</a>.
+  <a href="https://support.count.ly/hc/en-us/articles/900000819806-Performance-monitoring" target="_self">Performance Monitoring documentation</a>.
 </p>
 <p>
   Here is how you can utilize Performance Monitoring feature in your iOS apps:
@@ -4141,7 +4144,7 @@ Countly.sharedInstance().cancelConsent(forFeature: CLYConsentEvents)</code></pre
   large amounts of data to the server. If these limits are exceeded, the data will
   be truncated to keep it within the limit. You can check the exact parameters
   these limits effect from
-  <a href="/hc/en-us/articles/9290669873305#sdk_internal_limits" target="_blank" rel="noopener noreferrer">here</a>.
+  <a href="https://support.count.ly/hc/en-us/articles/9290669873305-A-deeper-look-at-SDK-concepts#sdk_internal_limits" target="_blank" rel="noopener noreferrer">here</a>.
 </p>
 <h3 id="h_01HTPANJCZTKQVAMJ1A2YSYGNE">Key Length</h3>
 <p>
@@ -4458,7 +4461,7 @@ func toString(dictionaryOrArrayToOutput: Any) - String {
   <span style="font-weight: 400;">Now it is time to add the Countly iOS SDK to your project. After cloning the Countly iOS SDK anywhere you would like, Drag&amp;Drop <code>.h</code> and <code>.m</code> files in <code>countly-sdk-ios</code></span><span style="font-weight: 400;"> folder into your Xcode project, and in the following dialog, please ensure the iPhone app target and </span><strong>WatchKit Extension</strong><span style="font-weight: 400;"> target (not WatchKit App) have been selected as well as the </span><strong>Copy items if needed</strong><span style="font-weight: 400;"> checkbox.</span>
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/SvLcZmJTQPKXYWtkXdLn_hcHj93L.png">
+  <img src="https://count.ly/images/guide/SvLcZmJTQPKXYWtkXdLn_hcHj93L.png">
 </div>
 <p>
   <strong>5.</strong> Import <code>Countly.h</code> into
@@ -4653,14 +4656,6 @@ end</code></pre>
   These content blocks are dynamically served from the content builder on the server,
   ensuring that users receive relevant and up-to-date information.
 </p>
-<div class="callout callout--info">
-  <p>
-    For learning how you can use Journeys &amp; Content Builder to create In-App
-    messages you can check
-    <a href="/hc/en-us/articles/18995770340380" target="_blank" rel="noopener noreferrer">this</a>
-    article.
-  </p>
-</div>
 <p>
   To start fetching content from the server, use the following method:
 </p>
@@ -5068,7 +5063,7 @@ Countly.sharedInstance().changeDeviceIDWithoutMerge("new_device_id")</code></pre
   <span class="wysiwyg-color-black">Can I integrate Countly iOS SDK using CocoaPods?</span>
 </h2>
 <p>
-  <span class="wysiwyg-color-black">We keep our <code>Countly.podspec</code> file up-to-date, so you can integrate Countly iOS SDK using CocoaPods. But, please make sure you <a href="#h_01HAVHW0RTXSFZD8R6QMX0GWPN">read our notes</a> to avoid issues.</span>
+  <span class="wysiwyg-color-black">We keep our <code>Countly.podspec</code> file up-to-date, so you can integrate Countly iOS SDK using CocoaPods. But, please make sure you <a href="https://support.count.ly/hc/en-us/articles/360037753511-iOS-watchOS-tvOS-macOS#h_01HAVHW0RTXSFZD8R6QMX0GWPN">read our notes</a> to avoid issues.</span>
 </p>
 <h2 id="h_01HAVHW0RTR6D4DH3VNENYY5C4">
   <span class="wysiwyg-color-black">How can I tell which Countly iOS SDK version I am using?</span>
@@ -5092,7 +5087,7 @@ Countly.sharedInstance().changeDeviceIDWithoutMerge("new_device_id")</code></pre
   <span class="wysiwyg-color-black">In addition to this, you can use Custom Property Modifiers to set, unset or modify Custom Properties and record your changes using <code>[Countly.user save];</code> method again.</span>
 </p>
 <p>
-  <span class="wysiwyg-color-black">For details please see <a href="#h_01HAVHW0RRRH4M1Y4CDJSHGERJ">User Profiles documentation</a>.</span>
+  <span class="wysiwyg-color-black">For details please see <a href="https://support.count.ly/hc/en-us/articles/360037753511-iOS-watchOS-tvOS-macOS#h_01HAVHW0RRRH4M1Y4CDJSHGERJ">User Profiles documentation</a>.</span>
 </p>
 <h2 id="h_01HAVHW0RTF435Z2N9WTK4BEBD">
   <span class="wysiwyg-color-black">How can I handle logged in and logged out users?</span>
@@ -5125,7 +5120,7 @@ Countly.sharedInstance().changeDeviceIDWithoutMerge("new_device_id")</code></pre
   <span class="wysiwyg-color-black">How can I manually record push notification custom button actions?</span>
 </h2>
 <p>
-  <span class="wysiwyg-color-black">If you have set <code>doNotShowAlertForNotifications</code> flag on initial configuration object to handle push notifications manually, you can create your own custom UI to show notification message and action buttons. For this, just implement <code>- (void) application:(UIApplication *)application didReceiveRemoteNotification:(NSDictionary *)userInfo fetchCompletionHandler:(void (^)(UIBackgroundFetchResult))completionHandler</code> method in your application's delegate. For details of handling notification manually, please see <a href="#h_01HAVHW0RQRHJ27TXHTTZ0F82M">Handling Notifications Manually</a> section.</span>
+  <span class="wysiwyg-color-black">If you have set <code>doNotShowAlertForNotifications</code> flag on initial configuration object to handle push notifications manually, you can create your own custom UI to show notification message and action buttons. For this, just implement <code>- (void) application:(UIApplication *)application didReceiveRemoteNotification:(NSDictionary *)userInfo fetchCompletionHandler:(void (^)(UIBackgroundFetchResult))completionHandler</code> method in your application's delegate. For details of handling notification manually, please see <a href="https://support.count.ly/hc/en-us/articles/360037753511-iOS-watchOS-tvOS-macOS#h_01HAVHW0RQRHJ27TXHTTZ0F82M">Handling Notifications Manually</a> section.</span>
 </p>
 <h2 id="h_01HAVHW0RTVFVX2KYZBY7NS2G4">
   <span class="wysiwyg-color-black">How can I get rid of compiler warning "No rule to process file"?</span>
@@ -5205,7 +5200,7 @@ Countly.sharedInstance().changeDeviceIDWithoutMerge("new_device_id")</code></pre
   their functions and implement the required features. Before any of it is sent
   to the server, it is stored locally. For further information please have a look
   to the
-  <a href="/hc/en-us/articles/9290669873305#h_01HJ5MD0WB97PA9Z04NG2G0AKC">collected informations</a>
+  <a href="https://support.count.ly/hc/en-us/articles/9290669873305-A-deeper-look-at-SDK-concepts#h_01HJ5MD0WB97PA9Z04NG2G0AKC">collected informations</a>
   for all SDKs.
 </p>
 <p>
