--- a/react_native_bridged/25.1.md
+++ b/react_native_bridged/25.1.md
@@ -1,5 +1,5 @@
 <p>
-  This documentation is for the Countly React Native SDK version 25.4.X The SDK
+  This documentation is for the Countly React Native SDK version 25.1.X The SDK
   source code repository can be found
   <a href="https://github.com/Countly/countly-sdk-react-native-bridge/" target="_blank" rel="noopener noreferrer">here.</a>
 </p>
@@ -11,8 +11,9 @@
   </p>
 </div>
 <p>
-  This is the Countly SDK for React Native applications. It features 'bridging',
-  meaning it uses Countly Android and iOS SDKs underneath.
+  This is the Countly SDK for React Native applications. It features bridging,
+  meaning it includes all the functionalities that Countly Android and iOS SDKs
+  provide rather than having those functionalities as React Native code.
 </p>
 <p>
   For this reason, Countly Android and iOS SDK system requirements are also extended
@@ -29,8 +30,7 @@
 <p>
   This SDK also depends on the react-native library for communicating with the
   native side. While it can possibly work with older versions, the currently supported
-  react-native versions are 0.60.0 and up and New Architecture support for Android
-  starts from this version.
+  react-native versions are 0.60.0 and up without New Architecture support.
 </p>
 <p>
   To examine the example integrations, please have a look
@@ -66,7 +66,7 @@ import CountlyConfig from 'countly-sdk-react-native-bridge/CountlyConfig';
 
 if(!await Countly.isInitialized()) {
   // create Countly config object
-  const countlyConfig = new CountlyConfig("<https://your.server.ly>", "YOUR_APP_KEY");
+  const countlyConfig = new CountlyConfig("https://your.server.ly", "YOUR_APP_KEY");
   await Countly.initWithConfig(countlyConfig); // Initialize the Countly SDK with config.
 }</code></pre>
 <p>
@@ -90,8 +90,8 @@ if(!await Countly.isInitialized()) {
 <h1 id="h_01HAVQNJQQ1QSEBM46DBK2DR77">SDK Logging</h1>
 <p>
   The first thing you should do while integrating our SDK is enable logging. If
-  logging is enabled, then our SDK will print out debug messages to your IDE's
-  console about its internal state and encountered problems.
+  logging is enabled, then our SDK will print out debug messages about its internal
+  state and encountered problems.
 </p>
 <p>
   Call <code class="javascript">setLoggingEnabled</code> on the config object to
@@ -779,7 +779,6 @@ await Countly.initWithConfig(countlyConfig); // Initialize the countly SDK with 
   completionHandler(0);
 }
 </code></pre>
-
 <h3 id="h_01HAVQNJQS165PB76SXZHC84PV">Data Structure Received in Push Callbacks</h3>
 <p>
   Here is an example of how the data will be received in push callbacks:<img src="/guide-media/01GYZ1ETTFDZQAMC8YA0Y0AQ8G" alt="002.png"><br>
@@ -1526,10 +1525,16 @@ await Countly.initWithConfig(countlyConfig); // Initialize the countly SDK with 
 <h2 id="h_01HPKC2VFEH3K77VCES1WPH7MN">Example Integrations</h2>
 <p>
   You can take a look at our example application in
-  <a href="https://github.com/Countly/countly-sdk-react-native-bridge/tree/staging/example" target="_blank" rel="noopener noreferrer">this GitHub repo</a>.
+  <a href="https://github.com/Countly/countly-sdk-rnb-example.git" target="_blank" rel="noopener">this Github repo</a>.
   It shows how the majority of the SDK functionality can be used. After you have
-  cloned the repo you can use the python script there to build the example.
+  cloned the repo, run the following commands from the root folder:
 </p>
+<pre><code class="bash">npm install                         # Install dependencies
+cd ios                              # Move to ios directory
+pod install                         # Download and install pods<br>
+cd ../                              # Move to parent directory
+react-native run-android # OR       # Run the android project
+react-native run-ios                # Run the iOS project</code></pre>
 <h2 id="h_01HTF4H350DJ15WXZWCK6PBACR">SDK Internal Limits</h2>
 <p>
   Countly SDKs have internal limits to prevent users from unintentionally sending
@@ -1753,7 +1758,7 @@ Countly.setCustomMetrics(customMetric);</code></pre>
   device ID.
 </p>
 <p>The objects in the returned list look like this:</p>
-<pre><code class="json">{
+<pre><code class="json">{ 
   "id"   : "WIDGET_ID",
   "type" : "WIDGET_TYPE",
   "name" : "WIDGET_NAME",
@@ -1778,14 +1783,6 @@ Countly.setCustomMetrics(customMetric);</code></pre>
   These content blocks are dynamically served from the content builder on the server,
   ensuring that users receive relevant and up-to-date information.
 </p>
-<div class="callout callout--info">
-  <p>
-    For learning how you can use Journeys &amp; Content Builder to create In-App
-    messages you can check
-    <a href="/hc/en-us/articles/18995770340380" target="_blank" rel="noopener noreferrer">this</a>
-    article.
-  </p>
-</div>
 <p>
   To start fetching content from the server, use the following method:
 </p>
@@ -1796,15 +1793,15 @@ Countly.setCustomMetrics(customMetric);</code></pre>
   and show it to the user.
 </p>
 <p>
-  If you need to check for an available content in a timecritical scenario you
-  can use:
-</p>
-<pre><code class="javascript">Countly.content.refreshContentZone();</code></pre>
-<p>
   When you want to exit from content zone and stop SDK from checking for available
   content you can use this method:
 </p>
 <pre><code class="javascript">Countly.content.exitContentZone();</code></pre>
+<div class="callout callout--warning">
+  <p>
+    Init time config options below needs minimum SDK version of 25.1.1!
+  </p>
+</div>
 <p>
   Content checks happens every 30 seconds by default but you can change this interval
   during initialization. Setting a low value would increase the load on your server
@@ -1816,27 +1813,3 @@ Countly.setCustomMetrics(customMetric);</code></pre>
   callback during SDK initialization. SDK would call it when the content is closed.
 </p>
 <pre><code class="javascript">countlyConfig.content.setGlobalContentCallback(callback);</code></pre>
-<h2 id="h_01JYRKD17Y41HGFERM0J0FV9GC">Server Configuration</h2>
-<p>
-  Server Configuration is enabled by default. Changes made on SDK Manager SDK Configuration
-  on your server will affect SDK behavior directly.
-</p>
-<p>
-  In all cases, the configuration may not be applied during the app’s first run.
-  If this is a security sensitive case for the situations, you can provide the
-  server config to the SDK during initialization.
-</p>
-<pre><code class="javascript">config.setSDKBehaviorSettings(configObject: object);</code></pre>
-<p>
-  If you want to disable automatic config updates from the server, you can prevent
-  the SDK from making server configuration fetch requests. This is useful if you're
-  trying to reduce network traffic or control request counts.
-</p>
-<pre><code class="javascript">countlyConfig.disableSDKBehaviorSettingsUpdates();</code></pre>
-<h2 id="h_01JYRKD17YP09AQ9PQDGSR5PA2">Backoff Mechanism</h2>
-<p>
-  SDK would detect if a server is underload and hold off sending requests for a
-  short time if there is no urgency to do so. If you want to disable this behavior
-  you can use this config option:
-</p>
-<pre><code class="javascript">countlyConfig.disableBackoffMechanism();</code></pre>
